--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,11 @@ yarn-debug.log*
 yarn-error.log*
 
 # vs
+.vs
+.vs/life/v15/.suo
+.vs/slnx.sqlite
 .vs/ProjectSettings.json
 .vs/config/applicationhost.config
 .vs/life/v15/.suo
 .vs/slnx.sqlite
+.vs/VSWorkspaceState.json
